[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/enemies/_EnemyBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://graphics/enemies/robot spider body.png" type="Texture" id=2]
[ext_resource path="res://scenes/enemies/RobotSpiderLeg.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/enemies/RobotSpider.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="CircleShape2D" id=2]

[node name="RobotSpider" instance=ExtResource( 1 )]
script = ExtResource( 4 )
Health = 2.0
EnemyType = 1

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1"]
texture = ExtResource( 2 )

[node name="Legs" type="Node2D" parent="." index="2"]
show_behind_parent = true

[node name="Right1" parent="Legs" index="0" instance=ExtResource( 3 )]
position = Vector2( 5, -6 )

[node name="Left1" parent="Legs" index="1" instance=ExtResource( 3 )]
position = Vector2( -5, -6 )
LeftSide = true

[node name="Right2" parent="Legs" index="2" instance=ExtResource( 3 )]
position = Vector2( 7, -3 )

[node name="Left2" parent="Legs" index="3" instance=ExtResource( 3 )]
position = Vector2( -7, -3 )
LeftSide = true

[node name="Right3" parent="Legs" index="4" instance=ExtResource( 3 )]
position = Vector2( 7, 0 )

[node name="Left3" parent="Legs" index="5" instance=ExtResource( 3 )]
position = Vector2( -7, 0 )
LeftSide = true

[node name="Right4" parent="Legs" index="6" instance=ExtResource( 3 )]
position = Vector2( 5, 2 )

[node name="Left4" parent="Legs" index="7" instance=ExtResource( 3 )]
position = Vector2( -5, 2 )
LeftSide = true

[node name="VerticalCast" type="RayCast2D" parent="." index="3"]
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 7

[node name="HorizontalCast" type="RayCast2D" parent="." index="4"]
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 7

[node name="PlayerDetector" type="Area2D" parent="." index="5"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector" index="0"]
shape = SubResource( 2 )
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
